--- a/day2-Dropdown/index.html
+++ b/day2-Dropdown/index.html
@@ -53,23 +53,12 @@
     </div>
 
     <div
-      class="dropdown-items-box w-[600px] flex flex-col rounded-md bg-gray-100 mt-14 border border-2 border-gray-200"
+    id="dropdown_items_box"
+      class="dropdown-items-box w-[600px] hidden flex-col rounded-md bg-gray-100 mt-14 border border-2 border-gray-200"
     >
-      <div
-       data-movieName="2. Die Hard"
-        class="flex gap-4 p-4 hover:bg-blue-500 hover:text-white transition duration-200 cursor-pointer"
-      >
-        <div class="w-[56px]">
-          <img
-            src="https://m.media-amazon.com/images/M/MV5BMGNlYmM1NmQtYWExMS00NmRjLTg5ZmEtMmYyYzJkMzljYWMxXkEyXkFqcGc@._V1_QL75_UX140_CR0,1,140,207_.jpg"
-            alt=""
-          />
-        </div>
-        <div class="flex flex-col align-center justify-center">
-          <h2 class="text-2xl font-medium">Die Hard</h2>
-          <h4 class="text-lg font-regular">1988</h4>
-        </div>
-      </div>
+    <!-- Dynamically rendered -->
+  </div>
+      
 
 
     <script src="https://cdn.tailwindcss.com"></script>
